fixed layout bug for signup/login pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,10 +47,15 @@
   background-color: #F9FAFB;
 }
 
+// .inner-app {
+//   width: 83%;
+//   margin: 0 auto;
+// }
+
 // Graphic Variables
-@import "config/fonts";
-@import "config/colors";
+// @import "config/fonts";
+// @import "config/colors";
 
 // SCSS Partials
-@import "components/index";
-@import "pages/index";
+// @import "components/index";
+// @import "pages/index";
